# Pico_W-Schloss

./: .gitignore  CMakeLists.txt  README.md
source/: Cert.h  lwipopts.h  main.cpp  mbedtls_config.h
source/home_assistant/: .gitignore  CMakeLists.txt  Format.cpp  HomeAssistant.cpp  HomeAssistant.h  altlast.cpp
source/home_assistant/JSON/: Discovery.h
source/network/: NetworkManager.h  Wifi.c  dns.c  lwipops_Network_Manager.h  mbedtls_config_default.h  mqtt.c  sntp.c  tcp_impl.c
